refactor: improve the quick practice component logic
